2000-04-27  Nalin Dahyabhai  <nalin@redhat.com>

	* cmds.c (remglob): Don't overflow buffer "temp".
	(shell): Don't overflow buffer "shellnam".
	(quote1): "buf"
	* glob.c (ftpglob): Fix boundary in buffer "agpath".
	(expand): Don't overflow buffer pointed to by "gpath".
	(execbrc): Don't overflow buffer "restbuf".

2000-02-18  Ken Raeburn  <raeburn@mit.edu>

	* cmds.c (mls): Declare some variables volatile to protect against
	getting clobbered by setjmp/longjmp.
	* ftp.c (sendrequest, recvrequest, proxtrans): Ditto.
	* main.c (main): Ditto.
	* pclose.c (mypopen): Ditto.

1999-10-26  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup. [from wsanchez@apple.com]

1999-09-21  Ken Raeburn  <raeburn@mit.edu>

	* ftp.c (getreply): Don't declare strpbrk or strstr functions if
	they're defined as macros.

1999-08-27  Tom Yu  <tlyu@mit.edu>

	* ftp.c: Diable krb5-mech2 for now.

Tue May 11 11:58:00 1999  Ezra Peisach  <epeisach@mit.edu>

	* ftp.c: Inclusion of gssapi_krb5.h requires gssapi_generic.h.

Thu Feb 25 23:05:03 1999  Tom Yu  <tlyu@mit.edu>

	* secure.c (secure_putbuf): Revert Sam's last change; if
 	FUDGE_FACTOR is wrong, then badness can happen.  Also, if
 	out_buf.length != nbytes+FUDGE_FACTOR, heap corruption could
 	happen.  We really should be using gss_wrap_size_limit() or
 	something like that, but doing so would require substantial
 	amounts of reworking. [krb5-appl/685]

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

1998-10-26  Marc Horowitz  <marc@mit.edu>

	* ftp.c (login): *always* encrypt the password, regardless
	of the default command mode.
	(do_auth): Try the new krb5 mech, and if that fails, try the
	old one.
